compiled in NotoSans font

--- a/plugins/dragonfly-reverb/Makefile
+++ b/plugins/dragonfly-reverb/Makefile
@@ -17,7 +17,8 @@ OBJS_DSP = \
 	
 OBJS_UI  = \
 	DragonflyReverbUI.cpp.o \
-	DragonflyReverbArtwork.cpp.o
+	DragonflyReverbArtwork.cpp.o \
+	NotoSans_Regular.ttf.cpp.o
 
 # --------------------------------------------------------------
 # Do some magic
