Prototype of LabelledKnob widget

--- a/plugins/dragonfly-reverb/Makefile
+++ b/plugins/dragonfly-reverb/Makefile
@@ -22,6 +22,7 @@ OBJS_UI  = \
 	NotoSans_Regular.ttf.cpp.o \
 	DragonflyReverbDSP.cpp.o \
 	Spectrogram.cpp.o \
+	LabelledKnob.cpp.o \
 	fft.c.o
 
 # --------------------------------------------------------------
