--- a/plugins/dragonfly-reverb/Makefile
+++ b/plugins/dragonfly-reverb/Makefile
@@ -13,8 +13,17 @@ NAME = DragonflyReverb
 # Files to build
 
 FILES_DSP = \
+	$(wildcard ../../freeverb3/libsamplerate2/*.c) \
+	$(wildcard ../../freeverb3/freeverb/*.cpp) \
 	DragonflyReverbPlugin.cpp \
-	DragonflyReverbDSP.cpp
+	DragonflyReverbDSP.cpp \
+	# ../../freeverb3/libsamplerate2/samplerate.c	\
+	# ../../freeverb3/libsamplerate2/src_common.c	\
+	# ../../freeverb3/libsamplerate2/src_sinc.c \
+	# ../../freeverb3/libsamplerate2/samplerate_common.c \
+	# ../../freeverb3/libsamplerate2/src_linear.c \
+	# ../../freeverb3/libsamplerate2/src_zoh.c \
+	# ../../freeverb3/freeverb/*.cpp
 
 FILES_UI  = \
 	DragonflyReverbUI.cpp \
@@ -30,7 +39,9 @@ FILES_UI  = \
 
 include ../../dpf/Makefile.plugins.mk
 
-BUILD_CXX_FLAGS := ../../freeverb3/*.cpp.o ../../freeverb3/*.c.o -I../../freeverb3 $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS := ../../freeverb3/freeverb/*.cpp.o ../../freeverb3/libsamplerate2/*.c.o -I../../freeverb3 $(BUILD_CXX_FLAGS)
+BUILD_C_FLAGS += -DLIBSRATE2_FLOAT -DHAVE_LRINT -DHAVE_LRINTF
+BUILD_CXX_FLAGS += -DLIBFV3_FLOAT -DHAVE_LRINT -DHAVE_LRINTF -I../../freeverb3
 
 # --------------------------------------------------------------
 # Link dependencies
