--- a/plugins/dragonfly-hall-reverb/Makefile
+++ b/plugins/dragonfly-hall-reverb/Makefile
@@ -29,8 +29,8 @@ FILES_UI  = \
 include ../../dpf/Makefile.plugins.mk
 
 BUILD_CXX_FLAGS := -I../../common $(BUILD_CXX_FLAGS)
-BUILD_CXX_FLAGS := ../../common/*.c.o $(BUILD_CXX_FLAGS)
 BUILD_CXX_FLAGS := ../../common/*.cpp.o $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS := ../../common/kiss_fft/*.c.o $(BUILD_CXX_FLAGS)
 BUILD_CXX_FLAGS := ../../common/freeverb/*.cpp.o $(BUILD_CXX_FLAGS)
 
 ifneq ($(SYSTEM_LIBSAMPLERATE),true)
