Remove dependency on libsamplerate

--- a/common/Makefile
+++ b/common/Makefile
@@ -18,7 +18,6 @@ OBJS += \
 	freeverb/progenitor.cpp.o \
 	freeverb/progenitor2.cpp.o \
 	freeverb/revbase.cpp.o \
-	freeverb/src.cpp.o \
 	freeverb/slot.cpp.o \
 	freeverb/strev.cpp.o \
 	freeverb/utils.cpp.o \
@@ -28,31 +27,11 @@ OBJS += \
 	kiss_fft/kiss_fftr.c.o
 endif
 
-ifneq ($(SYSTEM_LIBSAMPLERATE),true)
-OBJS += \
-	libsamplerate2/samplerate.c.o \
-	libsamplerate2/samplerate_common.c.o \
-	libsamplerate2/src_common.c.o \
-	libsamplerate2/src_linear.c.o \
-	libsamplerate2/src_sinc.c.o \
-	libsamplerate2/src_zoh.c.o
-endif
-
 all: $(OBJS)
-
-ifneq ($(SYSTEM_LIBSAMPLERATE),true)
-libsamplerate2/%.c.o: libsamplerate2/%.c
-	$(CC) $< $(BUILD_C_FLAGS) -I. -DLIBSRATE2_FLOAT -c -o $@
-endif
-
 
 ifneq ($(SYSTEM_FREEVERB3),true)
 freeverb/%.cpp.o: freeverb/%.cpp
-ifneq ($(SYSTEM_LIBSAMPLERATE),true)
-	$(CXX) $< $(BUILD_CXX_FLAGS) -I. -DLIBSRATE2_FLOAT -DLIBFV3_FLOAT -Wno-unused-parameter -c -o $@
-else
-	$(CXX) $< $(BUILD_CXX_FLAGS) -I. -DLIBSRATE1 -DLIBFV3_FLOAT -Wno-unused-parameter -c -o $@
-endif
+	$(CXX) $< $(BUILD_CXX_FLAGS) -I. -DLIBFV3_FLOAT -Wno-unused-parameter -c -o $@
 endif
 
 kiss_fft/%.c.o: kiss_fft/%.c
