--- a/plugins/dragonfly-room-reverb/Makefile
+++ b/plugins/dragonfly-room-reverb/Makefile
@@ -38,23 +38,14 @@ else
 BUILD_CXX_FLAGS := $(shell pkg-config --cflags freeverb3-3) $(BUILD_CXX_FLAGS)
 endif
 
-ifneq ($(SYSTEM_LIBSAMPLERATE),true)
-BUILD_CXX_FLAGS := ../../common/libsamplerate2/*.c.o $(BUILD_CXX_FLAGS)
-endif
-
 # --------------------------------------------------------------
 # Link dependencies
-
-ifeq ($(SYSTEM_LIBSAMPLERATE),true)
-BUILD_C_FLAGS := -DLIBSRATE1 $(BUILD_C_FLAGS)
-BUILD_CXX_FLAGS := -DLIBSRATE1 $(BUILD_CXX_FLAGS)
-LINK_OPTS += -lsamplerate
-endif
 
 ifneq ($(SYSTEM_FREEVERB3),true)
 LINK_OPTS += -lm
 else
-LINK_OPTS += -lm $(shell pkg-config --libs freeverb3-3)
+LINK_OPTS += -lm $(shell pkg-config --libs freeverb3-3) -lsamplerate
+BUILD_CXX_FLAGS := -DLIBSRATE1 $(BUILD_CXX_FLAGS)
 endif
 
 ifeq ($(WIN32),true)
