--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -42,7 +42,7 @@ jobs:
     - name: Install deps
       run: >-
         sudo apt-get install libx11-dev libgl1-mesa-dev 
-        libjack-jackd2-dev wine gcc-mingw-w64-i686 
+        libjack-jackd2-dev wine-development gcc-mingw-w64-i686 
         g++-mingw-w64-i686 gcc-mingw-w64-x86-64
         g++-mingw-w64-x86-64
     - name: Checkout submodules
