--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -32,6 +32,29 @@ jobs:
       with:
         name: linux build dir
         path: build/**
+  linux_build_old:
+    runs-on: ubuntu-16.04
+    steps:
+    - uses: actions/checkout@v2
+    - name: Update apt-get
+      run: sudo apt-get update
+    - name: Install deps
+      run: sudo apt-get install libx11-dev libgl1-mesa-dev libjack-jackd2-dev
+    - name: Checkout submodules
+      run: git submodule update --init --recursive
+    - name: Clean
+      run: make clean
+    - name: Build
+      run: make
+    - uses: actions/upload-artifact@v2
+      with:
+        name: linux old glibc plugins
+        path: bin/**
+    - uses: actions/upload-artifact@v2
+      with:
+        name: linux old glibc build dir
+        path: build/**
+
   macos_build:
     runs-on: macos-11.0
     steps:
