--- a/plugins/dragonfly-room-reverb/Makefile
+++ b/plugins/dragonfly-room-reverb/Makefile
@@ -37,7 +37,7 @@ BUILD_CXX_FLAGS := ../../common/kiss_fft/*.c.o $(BUILD_CXX_FLAGS)
 ifneq ($(SYSTEM_FREEVERB3),true)
 BUILD_CXX_FLAGS := ../../common/freeverb/*.cpp.o $(BUILD_CXX_FLAGS)
 else
-BUILD_CXX_FLAGS := $(shell $PKG_CONFIG --cflags freeverb3-3) $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS := $(shell $(PKG_CONFIG) --cflags freeverb3-3) $(BUILD_CXX_FLAGS)
 endif
 
 # --------------------------------------------------------------
@@ -46,7 +46,7 @@ endif
 ifneq ($(SYSTEM_FREEVERB3),true)
 LINK_OPTS += -lm
 else
-LINK_OPTS += -lm $(shell $PKG_CONFIG --libs freeverb3-3) -lsamplerate
+LINK_OPTS += -lm $(shell $(PKG_CONFIG) --libs freeverb3-3) -lsamplerate
 BUILD_CXX_FLAGS := -DLIBSRATE1 $(BUILD_CXX_FLAGS)
 endif
 
