--- a/plugins/dragonfly-room-reverb/Makefile
+++ b/plugins/dragonfly-room-reverb/Makefile
@@ -32,12 +32,12 @@ include ../../dpf/Makefile.plugins.mk
 
 PKG_CONFIG ?= pkg-config
 
-BUILD_CXX_FLAGS := -I../../common $(BUILD_CXX_FLAGS)
-BUILD_CXX_FLAGS := ../../common/kiss_fft/*.c.o $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS += -I../../common
+BUILD_CXX_FLAGS += ../../common/kiss_fft/*.c.o
 ifneq ($(SYSTEM_FREEVERB3),true)
-BUILD_CXX_FLAGS := ../../common/freeverb/*.cpp.o $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS += ../../common/freeverb/*.cpp.o
 else
-BUILD_CXX_FLAGS := $(shell $(PKG_CONFIG) --cflags freeverb3-3) $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS += $(shell $(PKG_CONFIG) --cflags freeverb3-3)
 endif
 
 # --------------------------------------------------------------
@@ -47,7 +47,7 @@ ifneq ($(SYSTEM_FREEVERB3),true)
 LINK_OPTS += -lm
 else
 LINK_OPTS += -lm $(shell $(PKG_CONFIG) --libs freeverb3-3) -lsamplerate
-BUILD_CXX_FLAGS := -DLIBSRATE1 $(BUILD_CXX_FLAGS)
+BUILD_CXX_FLAGS += -DLIBSRATE1
 endif
 
 ifeq ($(WIN32),true)
