Make each plugin build its own AbstractUI instance
AbstractUI imports DistrhoUI.hpp, which is different per plugin.

Signed-off-by: falkTX <falktx@falktx.com>

--- a/plugins/dragonfly-early-reflections/Makefile
+++ b/plugins/dragonfly-early-reflections/Makefile
@@ -43,7 +43,7 @@ FILES_DSP = $(FILES_COMMON) \
 FILES_UI  = $(FILES_COMMON) \
 	Artwork.cpp \
 	UI.cpp \
-	../../common/AbstractUI.cpp \
+	AbstractUI.cpp \
 	../../common/LabelledKnob.cpp \
 	../../common/Spectrogram.cpp \
 	../../common/Bitstream_Vera_Sans_Regular.cpp
